<resources>
    <string name="app_name">Sekolah Kita</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="title_activity_login">Sekolah Kita</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">DAFTAR</string>
    <string name="email">Email</string>
    <string name="lupa_sandi">Lupa Sandi?</string>

    <!--String untuk nama navigasi-->
    <string name="beranda">Beranda</string>
    <string name="akun">akun</string>
    <string name="lainnya">lainnya</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ini_fragmnet_beranda">ini fragmnet beranda</string>
    <string name="ini_fragment_akun">ini fragment akun</string>
    <string name="hello_world_blank">Hello World Blank</string>
    <string name="todo">TODO</string>
    <string name="gambarIklan">TODO</string>

    // Acces Token untuk Mapbox
    <string name="acces_token">pk.eyJ1Ijoicml6a3l0cmlzdWxpc3R5byIsImEiOiJjanBqcThmcWEwOWhiM2txZGV3aWN6Z3BjIn0.O4A9Cr1LthI2L_I88U-WmA</string>
</resources>
