<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|start"
    tools:context=".LoginActivity"
    tools:ignore="ExtraText">

    <!--Logo Dari Aplikasi Sekolah Kita-->
    <ImageView
        android:id="@+id/Logo"
        android:layout_width="138dp"
        android:layout_height="130dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="89dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:ignore="ContentDescription,RtlCompat" />

    <!--Tulisan dari Nomor Induk Siswa-->
    <TextView
        android:id="@+id/textView_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="209dp"
        android:text="@string/email" />

    <!--Masukan untuk Nomor Induk Siswa-->
    <EditText
        android:id="@+id/editText_Email"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Logo"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginLeft="147dp"
        android:layout_alignParentLeft="true" tools:targetApi="o"
        android:layout_marginStart="147dp"
        android:layout_alignParentStart="true"
        android:autofillHints="" />

    <!--Tulisan dari Kata Sandi-->
    <TextView
        android:id="@+id/textView_KataSandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="159dp"
        android:text="@string/kata_sandi" />

    <!--Masukan untuk Nomor Induk Siswa-->
    <EditText
        android:id="@+id/editTextKataSandi"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Email"
        android:layout_marginLeft="147dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:layout_marginStart="147dp"
        tools:targetApi="o" />
    <!--android:layout_marginTop="3-dp"-->

    <!--Button Untuk Daftar-->
    <Button
        android:id="@+id/button_Daftar"
        android:layout_width="161dp"
        android:layout_height="19dp"
        android:layout_alignEnd="@+id/editText_Email"
        android:layout_alignRight="@+id/editText_Email"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="123dp"
        android:background="@color/colorPrimary"
        android:text="@string/daftar"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />
    <!--Button Untuk Masuk-->
    <Button
        android:id="@+id/button_Masuk"
        android:layout_width="161dp"
        android:layout_height="19dp"
        android:layout_alignEnd="@+id/editText_Email"
        android:layout_alignRight="@+id/editText_Email"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="99dp"
        android:background="@color/colorPrimary"
        android:text="@string/masuk"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />

    <!--Button Untuk Lupa Sandi-->
    <Button
        android:id="@+id/button_LupaSandi"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignEnd="@+id/editText_Email"
        android:layout_alignRight="@+id/editText_Email"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="75dp"
        android:background="?android:attr/windowBackground"
        android:text="@string/lupa_sandi"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorLink="@android:color/background_light"
        android:textSize="12sp" />

</RelativeLayout>
